# trails

./: .GPT.py  README.md  bibliografie.md  chatgpt.py  clean.py  elevations.py  geojson_to_csv.py  geojson_to_svg.py  index.html  mm_details.csv  pyproject.toml  scrape.py  success.md  tops.py
data/: lista_muntilor_wiki__1006744775.csv  mn_details.csv  mn_details_0.1.0.csv  mn_details_clean.geojson  mn_links_01.csv  mn_links_02.csv  unitati_relief.1.geojson  unitati_relief.2.geojson  unitati_relief.csv  unitati_relief_wsg.1.geojson  unitati_relief_wsg.2.geojson
maps/unitati_relief/: info.md
strava/: tcx_to_csv.py
strava/activities/: 8836580877.csv  8836580877.tcx  8848902623.csv  8848902623.tcx  8866824156.csv  8866824156.tcx  8878277312.csv  8878277312.tcx  8884576484.csv  8884576484.tcx  8893676500.tcx
