[tool.poetry]
name = "trails"
version = "0.1.0"
description = ""
authors = ["Sabin Purice <sabin.purice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
pandas = "^1.5.3"
icecream = "^2.1.3"
aiohttp = "^3.8.4"
geojson = "2.5.0"
dash = "^2.9.1"
python-dotenv = "^1.0.0"
nicegui = "^1.1.11"
drawsvg = "^2.1.1"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
